--- a/j/je/jea/jeanza.com.html
+++ b/j/je/jea/jeanza.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the jeanza.com privacy policy that was archived on 2008-10-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081003031629id_/http%3A//www.jeanza.com/index.php%3Fview%3Dprivacy%26cityid%3D1) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the jeanza.com privacy policy that was archived on 2009-11-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091103072627id_/http%3A//www.jeanza.com/index.php%3Fview%3Dprivacy%26cityid%3D1) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <title>British Columbia, Canada - Jeanza Free Local Classifieds</title>
@@ -9,9 +9,10 @@
 <meta name="description" content="Free local classifieds. Visit Jeanza to post and search free classified ads in goods for sale, pets, cars, electronics, housing, jobs and more">
 
 <link rel="SHORTCUT ICON" href="http://www.jeanza.com/images/jeanza.ico">
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="style-green.css">
 <link rel="stylesheet" type="text/css" href="pager.css">
 <link rel="stylesheet" type="text/css" href="cal.css">
+<link rel="stylesheet" type="text/css" href="contest.css">
 
 <link rel="stylesheet" type="text/css" href="custom_styles/carousel.css"> 
 <link rel="stylesheet" type="text/css" href="custom_styles/custom_carousel.css">
@@ -47,33 +48,47 @@
 <body>
 
 
+<div id="wrapper">
+<table width="100%" border="0" cellspacing="0" cellpadding="0" align="center"> <!--Main table -->
 
-<table width="99%" border="0" cellspacing="0" cellpadding="0" align="center">
-
-	<tbody><tr><td colspan="3"><table width="100%" border="0" cellspacing="0" cellpadding="0" id="header">
 	<tbody><tr>
-		
-		<td>
-<div id="logo">
+		<td colspan="2">
+			<div class="top-title">
+				<ul id="tiny_top_menu">
+			<li><a id="" href="index.php?cityid=1">Home</a> |</li>
+			<li><a href="http://www.jeanza.com/index.php?view=post&amp;cityid=1&amp;lang=en">Post a Free Classified</a> |</li>
+		</ul>
+		British Columbia, Canada - Jeanza Free Local Classifieds</div>	
+<table width="100%" border="0" cellspacing="2" cellpadding="2">
+  <tbody><tr>
+    <td width="130">
+	<div id="logo">
 <a href="?view=main&amp;cityid=1">
-<img src="images/logo.gif" border="0"><br>
-Free local classifieds</a>
+<img src="images/logo.gif" border="0">
+</a>
 </div>
-<div id="today">
-</div>
-		</td>
-
-		<td valign="middle" align="center">
-			<span class="localandfree">British Columbia</span>&nbsp;&nbsp;<a href="javascript://" onclick="toggle('501');">Change Region</a>
-		</td>
-
-
-<td>
+	</td>
+    <td align="left">
+	<div>
+<!-- AddThis Button BEGIN -->
+<script type="text/javascript">var addthis_pub = "jeanza";</script>
+<a href="http://www.addthis.com/bookmark.php" onmouseover="return addthis_open(this, '', '[URL]', '[TITLE]')" onmouseout="addthis_close()" onclick="return addthis_sendto()"><img src="http://s7.addthis.com/static/btn/lg-share-en.gif" width="125" height="16" border="0" alt=""></a><script type="text/javascript" src="http://s7.addthis.com/js/152/addthis_widget.js"></script>
+<!-- AddThis Button END -->
+	</div>
+	<div>
+		<span class="localandfree">British Columbia&nbsp;Free classifieds</span>
+	</div>
+	<div>
+		Tuesday, 03 November, 2009	</div>
+	<div>
+Location:&nbsp;British Columbia&nbsp;<a href="javascript://" onclick="toggle('501');">[change]</a>
+	</div>
 <div class="closed" id="501">
 <table class="chregion" cellpadding="8" cellspacing="0">
   <tbody><tr class="other_head">
   	<td align="left">Change Region</td>
-    <td align="right"><a href="javascript://" onclick="toggle('501');"><img src="images/close_button.jpg" border="0"></a></td>
+    <td align="right"><a href="javascript://" onclick="toggle('501');"><img src="images/close_button.jpg" border="0"></a>
+	</td>
   </tr>
   
   <tr>
@@ -172,43 +187,92 @@ Free local classifieds</a>
   </tr>
 </tbody></table>
 </div>
-</td>					
+	</td>
+    <td>
+		<div class="adbrite-left">
+			<!-- Begin: NEverblue, Generated: 2009-09-28 14:49:15  -->
+<script type="text/javascript" src="http://rotator.nbjmp.com/optimizer/?optimizer_id=14670&amp;a=141068&amp;s=114105&amp;js=true"></script>
+<!-- End: NEverblue -->		</div>
+	</td>
+  </tr>
+</tbody></table>
 
-<td align="right" valign="top">
-<div class="pnav">
-<table cellpadding="0" cellspacing="0" border="0">
+<!--<div class="search-bar"> -->
+<table width="100%" cellpadding="0" cellspacing="0">
+  <tbody><tr>
+    <td align="left" class="info_bar">
+		<ul id="minitabs">
+    <li><a id="" href="index.php?cityid=1">Home</a></li>
+    <li><a id="" href="http://www.jeanza.com/index.php?view=post&amp;cityid=1&amp;lang=en">Post Ad</a></li>
+    		<li><a id="" href="index.php?view=post&amp;postevent=1&amp;cityid=1">Post Event</a></li>
+	    		<li><a id="" href="index.php?view=postimg&amp;cityid=1">Post Image</a></li>
+	    <li><a id="" href="index.php?view=help&amp;cityid=1">Help</a></li>
+	<li><a id="" href="index.php?view=directory">Directory</a></li>
+
+</ul>	</td>
+    <td align="right" class="info_bar">
+		<form action="?" method="get">
+<input type="hidden" name="cityid" value="1">
+<input type="hidden" name="lang" value="en">
+<table cellpadding="0" cellspacing="4" align="right">
 	<tbody><tr>
 		<td>
-			<table cellpadding="0" cellspacing="0" border="0" class="pnav">	
-				<tbody><tr>
-					<td id="postaditem" class="fc">
-						<a href="http://www.jeanza.com/index.php?view=post&amp;cityid=1&amp;lang=en">Post Ad</a>
-					</td>
-					<td id="posteventitem">
-						<a href="index.php?view=post&amp;postevent=1&amp;cityid=1">Post Event</a>
-					</td>
-					<td id="postimageitem" class="lc">
-						<a href="index.php?view=postimg&amp;cityid=1">Post Image</a>
-					</td>
-				</tr>
-			</tbody></table>
-		</td>
-	</tr>
-</tbody></table>
-</div>
-Thursday, 02 October, 2008</td>
+			<input name="search" type="text" size="20" value="">
+		</td><td>
+		
+		
+	</td><td>
+	 &nbsp; 	</td>
+<td>
+	<select name="catid">
+	<option value="6">buy and sell</option>
+<option value="7">pets</option>
+<option value="3">community</option>
+<option value="4">cars &amp; vehicles</option>
+<option value="5">services</option>
+<option value="8">personals</option>
+<option value="1">housing</option>
+<option value="2">jobs</option>
+	<option value="-1">Events</option>	</select>
+	</td>
+	<input type="hidden" name="view" value="ads">
+
+
+
+		<td>
+	 &nbsp; 	</td>
+		<td>
+	<select name="area">
+	<option value="">- All -</option>
+
+	<option value="Vancouver">Vancouver</option><option value="Burnaby">Burnaby</option><option value="Coquitlam">Coquitlam</option><option value="Delta">Delta</option><option value="New Westminster">New Westminster</option><option value="North Vancouver">North Vancouver</option><option value="Port Coquitlam">Port Coquitlam</option><option value="Port Moody">Port Moody</option><option value="Richmond">Richmond</option><option value="Surrey">Surrey</option><option value="Abbotsford">Abbotsford</option><option value="Maple Ridge">Maple Ridge</option><option value="Victoria">Victoria</option>
+	</select>
+	</td>
 	
-	</tr>
+<td>
+<input id="go" type="submit" value="Search">
+</td>
+</tr>
 </tbody></table>
+</form>	</td>
+  </tr>
+</tbody></table>
+<!--</div> -->
+
 <div class="local_and_free">
-		Welcome to Jeanza, your local free classifieds site for British Columbia</div></td></tr>	
+Popular Searches:&nbsp;<a href="?view=ads&amp;catid=1&amp;subcatid=1&amp;cityid=-1&amp;lang=en">apts/housing for rent</a>&nbsp;|&nbsp;<a href="?view=ads&amp;catid=7&amp;cityid=-1&amp;lang=en">pets</a>&nbsp;|&nbsp;<a href="?view=ads&amp;catid=6&amp;cityid=-1&amp;lang=en">buy and sell</a>&nbsp;|&nbsp;<a href="?view=ads&amp;catid=4&amp;cityid=-1&amp;lang=en">cars &amp; vehicles</a>&nbsp;|&nbsp;<a href="?view=ads&amp;catid=5&amp;cityid=-1&amp;lang=en">services</a>
+</div>		</td>
+	</tr>	
 	
 	<tr>
+<!--Left sibebar  -->
+<!--Traffic -->
+<!--End of Traffic sibebar -->
 
-
-		
-
-		<td valign="top" id="contentcell">
+<!--End of left sibebar -->
+	
+<!--Main content -->
+<td valign="top" id="contentcell">
         
 <table width="100%" border="0" cellpadding="3" cellspacing="0" id="path"><tbody><tr><td>			
 	
@@ -220,12 +284,25 @@ Thursday, 02 October, 2008</td>
 		
 	
 </td></tr></tbody></table>
+	<div class="adbrite">
+		<!-- Begin: AdBrite, Generated: 2009-08-20 14:53:51  -->
+<script type="text/javascript">
+var AdBrite_Title_Color = '0000FF';
+var AdBrite_Text_Color = '000000';
+var AdBrite_Background_Color = 'FFFFFF';
+var AdBrite_Border_Color = 'ffffff';
+var AdBrite_URL_Color = '008000';
+try{var AdBrite_Iframe=window.top!=window.self?2:1;var AdBrite_Referrer=document.referrer==''?document.location:document.referrer;AdBrite_Referrer=encodeURIComponent(AdBrite_Referrer);}catch(e){var AdBrite_Iframe='';var AdBrite_Referrer='';}
+</script>
+<span style="white-space:nowrap;"><script type="text/javascript">document.write(String.fromCharCode(60,83,67,82,73,80,84));document.write(' src="http://ads.adbrite.com/mb/text_group.php?sid=1309277&zs=3732385f3930&ifr='+AdBrite_Iframe+'&ref='+AdBrite_Referrer+'" type="text/javascript">');document.write(String.fromCharCode(60,47,83,67,82,73,80,84,62));</script><script src="http://ads.adbrite.com/mb/text_group.php?sid=1309277&amp;zs=3732385f3930&amp;ifr=1&amp;ref=https%3A%2F%2Fweb.archive.org%2Fweb%2F20091103072627id_%2Fhttp%253A%2F%2Fwww.jeanza.com%2Findex.php%253Fview%253Dprivacy%2526cityid%253D1" type="text/javascript"></script>
+<a target="_top" href="http://www.adbrite.com/mb/commerce/purchase_form.php?opid=1309277&amp;afsid=1"><img src="http://files.adbrite.com/mb/images/adbrite-your-ad-here-leaderboard.gif" style="background-color:#ffffff;border:none;padding:0;margin:0;" alt="Your Ad Here" width="14" height="90" border="0"></a></span>
+<!-- End: AdBrite -->	</div>
 
         <div style="display:none;"><!--#&74;#&69;#&65;#&78;#&90;#&65;#&46;#&99;#&111;#&109;--></div>
         
-		<table width="100%" cellspacing="0" cellpadding="0"><tbody><tr>
-		<td id="content">
-
+	<table width="100%" cellspacing="0" cellpadding="0">
+		<tbody><tr>
+			<td id="content">
 		<p><b>Jeanza Privacy Policy</b></p>
 <p>
 	Jeanza has established this privacy policy to explain to you how your information is protected, collected and used, which may be updated from time to time. This policy is effective May 19, 2008.
@@ -260,186 +337,49 @@ If needed, you can contact Jeanza.com or our Security Officer at:
 via email: support -at- jeanza -dot- com
 </p>
 
+			</td>
+		</tr>
+	</tbody></table>
+</td>
+<!--End of Main content -->
 
-		</td>
-		</tr></tbody></table>
+<!--Right Sidebar -->
+<!--End of Right Sidebar -->
+</tr>
 
-		</td>
-
-
-		
-			<td width="300" valign="top" id="sidebar_right">
-				<b>Categories »</b><br><img src="images/spacer.gif" height="5"><br>
-	<div class="catlist">
-
-	<div class="cat">
-	<img src="images/bullet.gif" align="absmiddle"> <a href="?view=ads&amp;catid=6&amp;cityid=1&amp;lang=en">buy and sell</a>
-	<span class="count">(71)</span>	</div>
-
-
-	<div class="cat">
-	<img src="images/bullet.gif" align="absmiddle"> <a href="?view=ads&amp;catid=7&amp;cityid=1&amp;lang=en">pets</a>
-	<span class="count">(124)</span>	</div>
-
-
-	<div class="cat">
-	<img src="images/bullet.gif" align="absmiddle"> <a href="?view=ads&amp;catid=3&amp;cityid=1&amp;lang=en">community</a>
-	<span class="count">(8)</span>	</div>
-
-
-	<div class="cat">
-	<img src="images/bullet.gif" align="absmiddle"> <a href="?view=ads&amp;catid=4&amp;cityid=1&amp;lang=en">cars &amp; vehicles</a>
-	<span class="count">(14)</span>	</div>
-
-
-	<div class="cat">
-	<img src="images/bullet.gif" align="absmiddle"> <a href="?view=ads&amp;catid=5&amp;cityid=1&amp;lang=en">services</a>
-	<span class="count">(22)</span>	</div>
-
-
-	<div class="cat">
-	<img src="images/bullet.gif" align="absmiddle"> <a href="?view=ads&amp;catid=8&amp;cityid=1&amp;lang=en">personals</a>
-	<span class="count">(0)</span>	</div>
-
-
-	<div class="cat">
-	<img src="images/bullet.gif" align="absmiddle"> <a href="?view=ads&amp;catid=1&amp;cityid=1&amp;lang=en">housing</a>
-	<span class="count">(517)</span>	</div>
-
-
-	<div class="cat">
-	<img src="images/bullet.gif" align="absmiddle"> <a href="?view=ads&amp;catid=2&amp;cityid=1&amp;lang=en">jobs</a>
-	<span class="count">(12)</span>	</div>
-
-</div>
-	<br><br>
-								<!-- Begin: AdBrite -->
-<script type="text/javascript">
-   var AdBrite_Title_Color = '0857a6';
-   var AdBrite_Text_Color = '000000';
-   var AdBrite_Background_Color = 'FFFFFF';
-   var AdBrite_Border_Color = 'CCCCCC';
-   var AdBrite_URL_Color = '008000';
-</script>
-<script src="http://ads.adbrite.com/mb/text_group.php?sid=754803&amp;zs=3330305f323530" type="text/javascript"></script>
-<div><a target="_top" href="http://www.adbrite.com/mb/commerce/purchase_form.php?opid=754803&amp;afsid=1" style="font-weight:bold;font-family:Arial;font-size:13px;">Your Ad Here</a></div>
-<!-- End: AdBrite --><div class="other_head">
-	Other Jeanza Sites</div>
-				<table width="100%"><tbody><tr><td valign="top">
-
-
-	<div><a href="?cityid=-1&amp;lang=en" class="citylist_country">Canada </a></div>
-
-
-	
-			<a href="?cityid=1&amp;lang=en" class="citylist_city">British Columbia </a><br>
-			
-	
-			<a href="?cityid=2&amp;lang=en" class="citylist_city">Alberta </a><br>
-			
-	
-			<a href="?cityid=3&amp;lang=en" class="citylist_city">Saskatchewan </a><br>
-			
-	
-			<a href="?cityid=4&amp;lang=en" class="citylist_city">Manitoba </a><br>
-			
-	
-			<a href="?cityid=5&amp;lang=en" class="citylist_city">Ontario </a><br>
-			
-	
-			<a href="?cityid=6&amp;lang=en" class="citylist_city">Quebec </a><br>
-			
-	
-			<a href="?cityid=7&amp;lang=en" class="citylist_city">New Brunswick </a><br>
-			
-	
-			<a href="?cityid=8&amp;lang=en" class="citylist_city">Nova Scotia </a><br>
-			
-	
-			<a href="?cityid=9&amp;lang=en" class="citylist_city">Prince Edward Island </a><br>
-			
-	
-			<a href="?cityid=10&amp;lang=en" class="citylist_city">Newfoundland / Labrador </a><br>
-			
-	
-
-	</td><td valign="top">
-
-	<div><a href="?cityid=-2&amp;lang=en" class="citylist_country">USA </a></div>
-
-
-	
-			<a href="?cityid=11&amp;lang=en" class="citylist_city">Alabama </a><br>
-			
-	
-			<a href="?cityid=12&amp;lang=en" class="citylist_city">Arkansas </a><br>
-			
-	
-			<a href="?cityid=13&amp;lang=en" class="citylist_city">Arizona </a><br>
-			
-	
-			<a href="?cityid=14&amp;lang=en" class="citylist_city">California </a><br>
-			
-	
-			<a href="?cityid=15&amp;lang=en" class="citylist_city">Colorado </a><br>
-			
-	
-			<a href="?cityid=16&amp;lang=en" class="citylist_city">Florida </a><br>
-			
-	
-			<a href="?cityid=17&amp;lang=en" class="citylist_city">Illinois </a><br>
-			
-	
-			<a href="?cityid=18&amp;lang=en" class="citylist_city">Kansas </a><br>
-			
-	
-			<a href="?cityid=19&amp;lang=en" class="citylist_city">Louisiana </a><br>
-			
-	
-			<a href="?cityid=20&amp;lang=en" class="citylist_city">Michigan </a><br>
-			
-	
-			<a href="?cityid=21&amp;lang=en" class="citylist_city">New Jersey </a><br>
-			
-	
-			<a href="?cityid=22&amp;lang=en" class="citylist_city">New York </a><br>
-			
-	
-			<a href="?cityid=23&amp;lang=en" class="citylist_city">Oregon </a><br>
-			
-	
-			<a href="?cityid=24&amp;lang=en" class="citylist_city">Texas </a><br>
-			
-	
-			<a href="?cityid=25&amp;lang=en" class="citylist_city">Washington </a><br>
-			
-	
-
-	
-</td></tr></tbody></table>			</td>
-
-		
-
-	</tr>
-
-
-<tr><td colspan="3"><table width="100%" id="footer"><tbody><tr><td>
+<!--Footer -->
+<tr>
+	<td colspan="2">
+		<table width="100%" id="footer"><tbody><tr><td>
 <a href="index.php?view=about&amp;cityid=1">About</a> | 
 <a href="index.php?view=terms&amp;cityid=1">Terms of Use</a> | 
-<a href="index.php?view=privacy&amp;cityid=1">Privacy Policy</a>
+<a href="index.php?view=privacy&amp;cityid=1">Privacy Policy</a> |
+<a href="index.php?view=help&amp;cityid=1">Help</a>
 <p>
-Copyright © 2007 - 2008 Jeanza Free Local Classifieds. All Rights Reserved.
+Copyright © 2007 - 2009 Jeanza Free Local Classifieds. All Rights Reserved.
 </p>
 
 <p>
-<a href="http://www.new.facebook.com/pages/Jeanzacom-Free-Local-Classifieds/27002854027" target="_blank"><img src="http://www.jeanza.com/images/find_us_on_facebook_badge.gif" alt="Find us on Facebook" width="144" height="44" longdesc="http://www.new.facebook.com/pages/Jeanzacom-Free-Local-Classifieds/27002854027"></a>®<br>
+<a href="http://www.facebook.com/pages/Jeanzacom-Free-Local-Classifieds/27002854027" target="_blank"><img src="images/find_us_on_facebook_badge.gif" alt="Find us on Facebook" width="144" height="44" longdesc="http://www.new.facebook.com/pages/Jeanzacom-Free-Local-Classifieds/27002854027" border="0"></a>®<br>
 Facebook  is a registered trademark of Facebook, Inc.
 </p>
+<p>
+<!-- GoStats JavaScript Based Code -->
+<script type="text/javascript" src="http://gostats.com/js/counter.js"></script>
+<script type="text/javascript">_gos='c4.gostats.com';_goa=338263;
+_got=6;_goi=43;_goz=0;_gol='analytics';_GoStatsRun();</script>
+<noscript><a target="_blank" title="analytics" 
+href="http://gostats.com"><img alt="analytics" 
+src="http://c4.gostats.com/bin/count/a_338263/t_6/i_43/counter.png" 
+style="border-width:0" /></a></noscript>
+<!-- End GoStats JavaScript Based Code -->
+</p>
+</td></tr></tbody></table>	</td>
+</tr>
+<!--End of Footer -->
 
-</td></tr></tbody></table></td></tr>
-
-
-</tbody></table>
+</tbody></table><!--End of Main table -->
+</div>
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
