--- a/h/ho/hos/host.co.in.html
+++ b/h/ho/hos/host.co.in.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the host.co.in privacy policy that was archived on 2009-04-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090419125053id_/http%3A//www.host.co.in/privacy-policy-hosting.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the host.co.in privacy policy that was archived on 2009-11-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091103085533id_/http%3A//www.host.co.in/privacy-policy-hosting.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Web Hosting Provider India - Hosting Privacy Policy</title>
@@ -41,18 +41,39 @@
 </style>
 <![endif]-->
 <!--<script language="JavaScript" src="http://ultra7.clickchatsold.com/D6/hostcoin.js" type="text/javascript"></script>-->
-<script language="javascript" type="text/javascript">
+<script language="JavaScript" src="banner.js" type="text/javascript"></script><style type="text/css">
+.top_banner{display:none;}
+</style>
 
-function popChatWin() 
-
-{
-
- window.open('http://server.iad.liveperson.net/hc/59448507/?cmd=file&amp;file=visitorWantsToChat&amp;site=59448507&amp;imageUrl=http://server.iad.liveperson.net/hcp/Gallery/ChatButton-Gallery/English/General/1a&amp;referrer='+escape(document.location),'chat59448507','width=475,height=400,resizable=yes');
-
+<script language="JavaScript" type="text/javascript">
+<!-- Begin
+function popUp(URL) {
+day = new Date();
+id = day.getTime();
+eval("page" + id + " = window.open(URL, '" + id + "', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=300,height=310');");
 }
-
+// End -->
 </script>
-</head>
+
+<style type="text/css">
+<!--
+#Layer31 {
+	position:absolute;
+	width:239px;
+	height:43px;
+	z-index:102;
+	left: 345px;
+	top: 1px;
+}
+-->
+</style>
+<script language="javascript" type="text/javascript">
+function popChatWin() 
+{
+ window.open('http://server.iad.liveperson.net/hc/59448507/?cmd=file&amp;file=visitorWantsToChat&amp;site=59448507&amp;imageUrl=http://server.iad.liveperson.net/hcp/Gallery/ChatButton-Gallery/English/General/1a&amp;referrer='+escape(document.location),'chat59448507','width=475,height=400,resizable=yes');
+}
+</script>
+<script type="text/javascript" charset="iso-8859-1" src="https://server.iad.liveperson.net/hcp/html/mTag.js?site=59448507"></script></head>
 <body>
 <!-- ImageReady Slices (design1.psd) -->
 <div id="page">
@@ -60,8 +81,16 @@ function popChatWin()
 <script language="JavaScript" src="rollchat.js" type="text/javascript"></script>
 <div id="Layer1">
 <div id="caption"><strong><a href="http://www.host.co.in/" class="siteMaps">MANAGED DEDICATED SERVERS</a></strong></div>
-<div id="Layer11"><a href="http://www.host.co.in/" class="topMenu" title="Web Hosting Company India">HOME</a> &nbsp; | &nbsp;<a href="http://www.host.co.in/dedicated-servers-hosting.php" class="topMenu" title="Dedicated Servers Hosting"><strong>DEDICATED HOSTING</strong></a> &nbsp; | &nbsp; <a href="windows-vps-web-hosting.php" class="topMenu" title="Plesk VPS"><strong>WINDOWS VPS</strong></a> &nbsp; | &nbsp; <a href="linux-vps-web-hosting.php" class="topMenu" title="cPANEL VPS"><strong>LINUX VPS</strong></a> &nbsp; | &nbsp; <a href="http://www.host.co.in/windows-shared-web-hosting.php" class="topMenu" title="Windows Hosting">WINDOWS HOSTING</a> &nbsp; | &nbsp; <a href="http://www.host.co.in/linux-shared-web-hosting.php" class="topMenu" title="CPanel Shared Web Hosting India"><strong>CPANEL HOSTING</strong></a>&nbsp; | &nbsp; <a href="http://www.host.co.in/reseller-hosting/reseller-web-hosting.php" class="topMenu" title="Reseller Hosting"><strong>RESELLER HOSTING</strong></a> </div>
-<div id="Layer2">  <a href="http://www.host.co.in/about-hosting-company.php" class="middleMenu" title="About Us">ABOUT US</a> &nbsp; | &nbsp; <a href="http://www.host.co.in/hosting-contact-us.php" class="footerMenu" title="Contact Host India">CONTACT US</a> &nbsp; | &nbsp; <a href="http://www.host.co.in/whmcs/clientarea.php" class="middleMenu" title="User Login"><strong>CLIENT LOGIN</strong></a> &nbsp; | &nbsp; <a href="http://www.host.co.in/hosting-careers.php" class="middleMenu" title="Careers">CAREERS</a> &nbsp; | &nbsp; <a href="http://www.host.co.in/forums/" class="middleMenu" title="Web Host Forums">FORUMS</a> &nbsp; | &nbsp;<a href="http://www.host.co.in/web-hosting-datacenter.php" class="middleMenu" title="Data Center">DATA CENTER TOUR</a> &nbsp; | &nbsp; <a href="http://www.host.co.in/semidedicated-web-hosting.php" class="middleMenu"><strong>SEMI-DEDICATED SERVERS</strong></a></div>
+<div id="Layer31">
+  <div style="position:relative;top:20px;left:-5px; width:360px;height:35px;vertical-align:middle; overflow:hidden; line-height:18px; color:#65A5E9;">
+		 	<div id="dropmsg0" align="center" style="display: block;">MANAGED DEDICATED WEB HOSTING SERVICE <br> SHARED CPANEL WEB HOSTING </div>
+				<div id="dropmsg1" align="center" style="display: none;">WEB HOSTING INDIA  <br> LINUX VPS WEB HOSTING  </div>
+				<div id="dropmsg2" align="center" style="display: none;">PHP MYSQL WEBSITE <br> WITH CPANEL FANTASTICO</div>
+				<div id="dropmsg3" align="center" style="display: none;">TOP WEB HOSTING PROVIDER INDIA <br> 24/7 LIVE CHAT SUPPORT</div>
+</div>
+  </div>
+<div id="Layer11"><a href="http://www.host.co.in/dedicated-servers-hosting.php" class="topMenu" title="Dedicated Servers Hosting"><strong>DEDICATED SERVER</strong></a> &nbsp;|&nbsp;<a href="http://www.host.co.in/windows-hosting.php" class="topMenu" title="Windows Hosting">WINDOWS HOSTING</a>&nbsp;|&nbsp;<a href="http://www.host.co.in/cpanel-shared-web-hosting.php" class="topMenu" title="CPanel Shared Web Hosting India"><strong>CPANEL HOSTING</strong></a>&nbsp; | &nbsp;<a href="http://www.host.co.in/windows-vps-web-hosting.php" class="topMenu" title="Windows VPS"><strong>WINDOWS VPS</strong></a>&nbsp;|&nbsp;<a href="http://www.host.co.in/linux-vps-web-hosting.php" class="topMenu" title="cPANEL VPS"><strong>LINUX VPS</strong></a>&nbsp;|&nbsp;<a href="http://www.host.co.in/hyper-v-virtual-private-server.php" class="topMenu"><strong>HYPER-V VPS</strong></a>&nbsp;|&nbsp;<a href="http://www.host.co.in/hosting-contact-us.php" class="footerMenu" title="Contact Host India">CONTACT US</a> </div>
+<div id="Layer2">  <a href="http://www.host.co.in/about-hosting-company.php" class="middleMenu" title="About Us">ABOUT US</a>&nbsp;|&nbsp;<a href="http://www.host.co.in/whmcs/clientarea.php" class="middleMenu" title="User Login"><strong>CLIENT LOGIN</strong></a>&nbsp;|&nbsp;<a href="http://www.host.co.in/hosting-careers.php" class="middleMenu" title="Careers">CAREERS</a>&nbsp;|&nbsp;<a href="http://www.host.co.in/forums/" class="middleMenu" title="Web Host Forums">FORUMS</a>&nbsp;|&nbsp;<a href="http://www.host.co.in/web-hosting-datacenter.php" class="middleMenu" title="Data Center">DATA CENTER TOUR</a>&nbsp;|&nbsp;<a href="http://www.host.co.in/reseller-hosting/reseller-web-hosting.php" class="topMenu" title="Reseller Hosting India UK"><strong>RESELLER HOSTING</strong></a>&nbsp;|&nbsp;<a href="http://www.host.co.in/semidedicated-web-hosting.php" class="middleMenu"><strong>SEMI-DEDICATED SERVER</strong></a></div>
 <div id="Layer29">
 <form action="http://www.host.co.in/whmcs/domainchecker.php" method="post"> 
 <input type="hidden" name="direct" value="true"> 
@@ -87,8 +116,9 @@ function popChatWin()
 </select>
 <input type="submit" value="" id="serach-button"> 
 </form></div>
- <img src="images/header.gif" width="930" height="114" border="0" usemap="#Map" alt="web hosting provider"><img src="images/header2.gif" width="930" height="196" border="0" usemap="#Map2" alt="web hosting">
-<map name="Map2" id="Map2"><area shape="rect" coords="567,132,666,158" href="http://www.host.co.in/linux-shared-web-hosting.php" alt="shared hosting">
+<img src="images/header.gif" width="930" height="114" border="0" usemap="#Map" alt="web hosting provider"><img src="images/header2.gif" width="930" height="196" border="0" usemap="#Map2" alt="web hosting">
+<map name="Map2" id="Map2">
+<area shape="rect" coords="705,2,929,166" onmouseover="ddrivetip('24/7 Live Support Chat')" onmouseout="hideddrivetip()" onclick="javascript:window.open('https://server.iad.liveperson.net/hc/59448507/?cmd=file&amp;file=visitorWantsToChat&amp;site=59448507&amp;imageUrl=https://server.iad.liveperson.net/hcp/Gallery/ChatButton-Gallery/English/General/1a&amp;referrer='+escape(document.location),'chat59448507','width=475,height=400,resizable=yes');return false;" alt="Web Hosting with LIVE SUPPORT" href="http://server.iad.liveperson.net/hc/59448507/?cmd=file&amp;file=visitorWantsToChat&amp;site=59448507&amp;byhref=1&amp;imageUrl=http://server.iad.liveperson.net/hcp/Gallery/ChatButton-Gallery/English/TechSupport/1a" target="chat59448507" style="cursor:pointer">
 </map>
 </div>
 <!-- Middle Content Start -->
@@ -134,7 +164,8 @@ Host.co.in welcomes your comments regarding this privacy statement. If you have 
 </tr>
 <style type="text/css">
 <!--
-.style1 {color: #333333}
+.style1 {color: #333333;
+padding-top:10px;}
 -->
 </style>
 <tr><td>
@@ -142,7 +173,9 @@ Host.co.in welcomes your comments regarding this privacy statement. If you have 
 <tbody><tr>
 <td><img src="images/logos.jpg" width="930" height="40" alt="web hosting logos">
 <div id="Layer7">
-<div id="Layer8">&nbsp; <a href="http://www.host.co.in/" class="footerMenu">WEB HOSTING INDIA</a> &nbsp; | &nbsp; <a href="http://www.host.co.in/knowledgebase/" class="footerMenu">KNOWLEDGEBASE</a> &nbsp;| &nbsp; <a href="http://www.host.co.in/support.php" class="footerMenu">TUTORIALS</a> &nbsp;| &nbsp; <a href="http://www.host.co.in/company-tos.php" class="footerMenu">TERMS OF SERVICE</a> &nbsp;| &nbsp; <a href="http://www.host.co.in/privacy-policy-hosting.php" class="footerMenu">PRIVACY POLICY</a> &nbsp; | &nbsp; <a href="http://www.host.co.in/sitemap.php" class="footerMenu">SITEMAP</a>&nbsp;<br><br><br> 
+<div id="Layer8">&nbsp; <a href="http://www.host.co.in/" class="footerMenu">WEB HOSTING INDIA</a> &nbsp; | &nbsp; <a href="http://blog.host.co.in/" class="footerMenu">BLOG</a> &nbsp;  &nbsp; | &nbsp; <a href="http://www.host.co.in/forums/" class="footerMenu">FORUM</a> &nbsp; | &nbsp; <a href="http://www.host.co.in/knowledgebase/" class="footerMenu">KNOWLEDGEBASE</a> &nbsp;| &nbsp; <a href="http://www.host.co.in/support.php" class="footerMenu">TUTORIALS</a> &nbsp;| &nbsp; <a href="http://www.host.co.in/company-tos.php" class="footerMenu">TERMS OF SERVICE</a> &nbsp;| &nbsp; <a href="http://www.host.co.in/privacy-policy-hosting.php" class="footerMenu">PRIVACY POLICY</a> &nbsp; | &nbsp; <a href="http://www.host.co.in/sitemap.php" class="footerMenu">SITEMAP</a>&nbsp;<br>
+<br>
+<br>
 <span class="style1">Copyrights © 2005-2009 <a href="http://www.host.co.in/" class="siteMaps">Host.co.in</a> - <a href="http://www.host.co.in/" class="siteMaps">Managed Servers Hosting</a> All rights reserved.<br></span></div>
 </div></td></tr>
 </tbody></table>
@@ -154,10 +187,25 @@ var lpPosY = 100;
 </script>
 <!-- END Invitation Positioning  -->
 <!-- BEGIN HumanTag Monitor. DO NOT MOVE! MUST BE PLACED JUST BEFORE THE /BODY TAG -->
-<script language="javascript" src="https://server.iad.liveperson.net/hc/59448507/x.js?cmd=file&amp;file=chatScript3&amp;site=59448507&amp;&amp;imageUrl=https://server.iad.liveperson.net/hcp/Gallery/ChatButton-Gallery/English/General/1a" type="text/javascript"> </script><!-- END HumanTag Monitor. DO NOT MOVE! MUST BE PLACED JUST BEFORE THE /BODY TAG -->
+<!-- BEGIN LivePerson Monitor. -->
+<script language="javascript"> var lpMTagConfig = {'lpServer' : "server.iad.liveperson.net",'lpNumber' : "59448507",'lpProtocol' : "https"}; function lpAddMonitorTag(src){if(typeof(src)=='undefined'||typeof(src)=='object'){src=lpMTagConfig.lpMTagSrc?lpMTagConfig.lpMTagSrc:'/hcp/html/mTag.js';}if(src.indexOf('http')!=0){src=lpMTagConfig.lpProtocol+"://"+lpMTagConfig.lpServer+src+'?site='+lpMTagConfig.lpNumber;}else{if(src.indexOf('site=')<0){if(src.indexOf('?')<0)src=src+'?';else src=src+'&';src=src+'site='+lpMTagConfig.lpNumber;}};var s=document.createElement('script');s.setAttribute('type','text/javascript');s.setAttribute('charset','iso-8859-1');s.setAttribute('src',src);document.getElementsByTagName('head').item(0).appendChild(s);} if (window.attachEvent) window.attachEvent('onload',lpAddMonitorTag); else window.addEventListener("load",lpAddMonitorTag,false);</script><!-- END LivePerson Monitor. -->
+<!-- BEGIN Monitor Tracking Variables  -->
+<script language="JavaScript1.2">
+if (typeof(lpMTagConfig.sessionVar) == "undefined"){ lpMTagConfig.sessionVar = new Array();}
+lpMTagConfig.sessionVar[lpMTagConfig.sessionVar.length] = 'skill=Sales Team';
+</script>
+<!-- End Monitor Tracking Variables  -->
 <map name="Map" id="Map">
 <area shape="rect" coords="706,47,961,119" onmouseover="ddrivetip('24/7 Live Support Chat')" onmouseout="hideddrivetip()" onclick="javascript:window.open('https://server.iad.liveperson.net/hc/59448507/?cmd=file&amp;file=visitorWantsToChat&amp;site=59448507&amp;imageUrl=https://server.iad.liveperson.net/hcp/Gallery/ChatButton-Gallery/English/General/1a&amp;referrer='+escape(document.location),'chat59448507','width=475,height=400,resizable=yes');return false;" alt="Web Hosting with LIVE SUPPORT" href="http://server.iad.liveperson.net/hc/59448507/?cmd=file&amp;file=visitorWantsToChat&amp;site=59448507&amp;byhref=1&amp;imageUrl=http://server.iad.liveperson.net/hcp/Gallery/ChatButton-Gallery/English/TechSupport/1a" target="chat59448507" style="cursor:pointer" title="Online Live Chat">
 </map>
 <map name="Map2" id="Map2">
 <area shape="rect" coords="705,-2,958,166" onmouseover="ddrivetip('24/7 Live Support Chat')" onmouseout="hideddrivetip()" onclick="javascript:window.open('https://server.iad.liveperson.net/hc/59448507/?cmd=file&amp;file=visitorWantsToChat&amp;site=59448507&amp;imageUrl=https://server.iad.liveperson.net/hcp/Gallery/ChatButton-Gallery/English/General/1a&amp;referrer='+escape(document.location),'chat59448507','width=475,height=400,resizable=yes');return false;" alt="Web Hosting with LIVE SUPPORT" href="http://server.iad.liveperson.net/hc/59448507/?cmd=file&amp;file=visitorWantsToChat&amp;site=59448507&amp;byhref=1&amp;imageUrl=http://server.iad.liveperson.net/hcp/Gallery/ChatButton-Gallery/English/TechSupport/1a" target="chat59448507" style="cursor:pointer" title="Online Live Chat">
-</map>	  	</body></html>
+</map>
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+try {
+_uacct = "UA-10643411-1";
+urchinTracker();
+} catch(err) {}</script>
+	  	</body></html>
